--- a/index.html
+++ b/index.html
@@ -28,25 +28,31 @@
       </div>
       <div class="content">
         <div class="link">
-          <a href="https://example.com" target="_blank"
+          <a
+            href="https://youtube.com/@kajianislam61?si=ByBmq0hZBgCaSEcD"
+            target="_blank"
             ><i class="fa-brands fa-youtube"></i> Youtube</a
           >
         </div>
 
         <div class="link">
-          <a href="https://example.com" target="_blank"
+          <a
+            href="https://www.tiktok.com/@kagamione?_t=ZS-8w66h89KWBu&_r=1"
+            target="_blank"
             ><i class="fa-brands fa-tiktok"></i> Tiktok</a
           >
         </div>
 
         <div class="link">
-          <a href="https://example.com" target="_blank"
+          <a
+            href="https://www.instagram.com/rasidi_xr?igsh=dmwxYXJsOHhsOHhr"
+            target="_blank"
             ><i class="fa-brands fa-instagram"></i> Instagram</a
           >
         </div>
 
         <div class="link">
-          <a href="https://example.com" target="_blank">
+          <a href="#" target="_blank">
             <i class="fa-brands fa-linkedin"></i> Linkedin</a
           >
         </div>
